# nonebot_plugin_ChatGLM6B

./: .gitignore  README.md  __init__.py  config.py  getchat.py  pyproject.toml
.github/workflows/: python-publish.yml
nonebot_plugin_chatglm6b/: __init__.py  chat.py  check.py  config.py  getchat.py  request.py  save.py  utils.py
